--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sum-CrystalKevlar",
+  "name": "sum-crystalkevlar",
   "version": "1.0.0",
   "description": "Một thư viện giúp bạn tính tổng của 2 số bất kỳ",
   "main": "index.js",
@@ -9,7 +9,7 @@
   "dependencies": {
     "are-arrays": "^1.0.0",
     "are-objects": "^1.0.0",
-    "sum-CrystalKevlar": "^1.0.0",
+    "sum-crystalkevlar": "^1.0.0",
 	"test-airdrop-khoa1" : "^0.1.0",
 	"test-airdrop-khoa" : "^0.1.1",
 	"tong-huukhoa": "^1.0.0",
@@ -49,7 +49,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/CrystalKevlar/sum-CrystalKevlar"
+    "url": "https://github.com/crystalkevlar/sum-crystalkevlar"
   },
   "homepage": "https://twitter.com/MGzelbilen",
   "keywords": [
@@ -58,6 +58,6 @@
     "tong",
     "cong"
   ],
-  "author": "CrystalKevlar",
+  "author": "crystalkevlar",
   "license": "MIT"
 }
